--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>@maykbrito</p>
   </div>
   <div id="switch" onclick="toggleMode()" >
-  <button>oi</button>
+  <button></button>
   <span></span>
 </div>
   <ul>
