--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </div>
   <ul>
     <li>
-      <a href="#">Inscrever-se no NLW</a>
+      <a href="https://app.rocketseat.com.br/plus/tag/nlw-spacetime">Inscrever-se no NLW</a>
     </li>
     <li>
-      <a href="#">Baixar meu e-book</a>
+      <a href="">Baixar meu e-book</a>
     </li>
     <li>
       <a href="https://github.com/maykbrito" target="_blank">Ver meu portfólio</a>
