--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
   <ul>
     <li>
-      <a href="https://app.rocketseat.com.br/plus/tag/nlw-spacetime">Inscrever-se no NLW</a>
+      <a href="https://app.rocketseat.com.br/plus/tag/nlw-spacetime" target="_blank">Inscrever-se no NLW</a>
     </li>
     <li>
       <a href="">Baixar meu e-book</a>
